<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="6dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration_title"/>
    <EditText
        android:id="@+id/registration_user_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_phone"
        android:inputType="phone" />
    <TextView
        android:id="@+id/registration_incorrect_phone"
        style="@style/ErrorMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/incorrect_phone"
        android:visibility="invisible"/>


    <EditText
        android:id="@+id/registration_password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"/>

    <TextView
        android:id="@+id/registration_password_rule"
        style="@style/ErrorMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rule_for_password"
        android:visibility="invisible"/>

    <EditText
        android:id="@+id/registration_repeat_password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/repeat_password"/>

    <TextView
        android:id="@+id/registration_password_not_match"
        style="@style/ErrorMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bad_repeat_password"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/registration_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text ="@string/registration_link"
        android:enabled="false"
        />




</LinearLayout>